# Model-Evaluation-Harness

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: eval-gate.yml
baselines/: a.json  b.json
configs/: default.yaml
data/calibration/: certificate.json  emails-fail-probe.jsonl  emails.jsonl  judgments.jsonl  labels.jsonl  perturbations.jsonl
data/calibration/sheets/: annotator-briefing.md  emails-reference.md  sheet-adjudication.csv  sheet-owner-supplement.csv  sheet-owner-supplement.jsonl  (+4 more)
data/dev/: dev.jsonl
data/golden/: briefs.md  golden.draft.jsonl  golden.jsonl  open-coding-digest.md  taxonomy.md
docs/: constitution.md  decisions.md  gate-design.md  plan.md  spec.md
docs/tickets/: README.md  T01-skeleton-config-schema.md  T02-deterministic-scoring.md  T03-permutation-test.md  T04-bootstrap.md  T05-agreement-mde-variance.md  T06-candidate-clients.md  T07-judge-client.md  T08-runner.md  T09-tracing.md  T10-reports.md  T11-cli-run-compare-rescore.md  T12-dev-set-prompt-freeze.md  T13-golden-set.md  T14-calibration.md  T15-baseline-module.md  T16-gate.md  T17-gate-design-doc.md  T18-ci-workflow.md  T19-readme-published.md  T20-acceptance-walk.md
results/published/: a-927b2dc82a761b18__b-b9cab21e8fb1c83a.md  latency-export.json  run-report-a-927b2dc82a761b18.md  run-report-b-b9cab21e8fb1c83a.md
src/harness/: calibrate.py  cli.py  config.py  prompts.py  reports.py  runner.py  schema.py  tracing.py
tests/live/: test_smoke.py
tests/unit/: test_calibrate.py  test_cli.py  test_config.py  test_dev_dataset.py  test_golden_dataset.py  test_prompts.py  test_reports.py  test_runner.py  test_schema.py  test_tracing.py
tools/: csv-grader.html  grade.bat  grade.py  pull_latency.py
(+63 files in other folders)
