[project]
name = "harness"
version = "0.1.0"
description = "A structured-extraction eval harness with a calibrated LLM judge and CI gating."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.116.0,<1",
    "google-genai>=2.10.0,<3",
    "langfuse>=3,<4",
    "numpy>=2.1,<3",
    "openai>=2.44.0,<3",
    "pydantic>=2.9,<3",
    "pyyaml>=6.0,<7",
    "typer>=0.15,<1",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "ruff>=0.8,<1",
    "scikit-learn>=1.5,<2",
    "scipy>=1.14,<2",
]

[project.scripts]
eval = "harness.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harness"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: hits real provider APIs; excluded by default, opt in with -m live",
]
addopts = "-m \"not live\""
